fixed ayat on firefox

--- a/public/assets/css/style.scss
+++ b/public/assets/css/style.scss
@@ -592,6 +592,7 @@ body.body-memo{
 			}
 
 	        .content_ayat{
+	        	display: inline-block;
 	        	padding: 0 15px;
 	        	line-height: 50px;
 	        }
